# TinyEXIF

./: CMakeLists.txt
